<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.enter_number.EnterNumberFragment">

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/sign_in"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:prefixText="+"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            android:hint="@string/enter_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:autofillHints="phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/get_code" />

    </LinearLayout>

</LinearLayout>